--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "serve": "cd ../../json-server/ && json-server -H 0.0.0.0 --watch db.json -p 3001 -d 2000"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
@@ -25,7 +26,10 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.7",
-    "@react-navigation/drawer": "5.12.9"
+    "@react-navigation/drawer": "5.12.9",
+    "redux": "4.1.2",
+    "react-redux": "7.2.6",
+    "@reduxjs/toolkit": "1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
