--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "serve": "cd ../../json-server/ && json-server -H 0.0.0.0 --watch db.json -p 3001 -d 2000"
+    "serve": "cd ../../json-server/ && json-server -H 0.0.0.0 --watch db.json -p 3001 -d 2000",
+    "slowServe": "cd ../../json-server/ && json-server -H 0.0.0.0 --watch db.json -p 3001 -d 10000"
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
