--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "slowServe": "cd ../../json-server/ && json-server -H 0.0.0.0 --watch db.json -p 3001 -d 10000"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.2.1",
@@ -34,7 +35,8 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.7",
     "react-redux": "7.2.6",
-    "redux": "4.1.2"
+    "redux": "4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
